--- a/style.css
+++ b/style.css
@@ -5,3 +5,14 @@
   color: #fff;
   font-family: Inter, Arial, sans-serif;
 }
+
+.header {
+  min-height: 74px;
+  margin-top: 45px;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
+}
+
+.header__logo {
+  width: 142px;
+  height: 33px;
+}
