--- a/style.css
+++ b/style.css
@@ -1,18 +1,108 @@
 .page {
-  max-width: 880px;
+  max-width: 918px;
   margin: 0 auto;
   background-color: #000;
   color: #fff;
   font-family: Inter, Arial, sans-serif;
+  box-sizing: border-box;
 }
 
 .header {
   min-height: 74px;
-  margin-top: 45px;
+  margin: 45px 19px 0;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 .header__logo {
   width: 142px;
   height: 33px;
+}
+
+.content {
+  margin: 0 19px 0;
+}
+
+.profile {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 120px;
+  margin-bottom: 50px;
+}
+
+.profile__picture {
+  display: block;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.profile__info {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  grid-template-rows: repeat(2, minmax(min-content, max-content));
+  gap: 16px;
+}
+
+.profile__name {
+  margin: 0;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 48px;
+}
+
+.profile__edit {
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  border: 1px solid #FFFFFF;
+  cursor: pointer;
+  transition: all .5s ease;
+}
+
+.profile__edit:hover {
+  opacity: .6;
+}
+
+.profile__pen {
+  width: 10px;
+  height: 10px;
+}
+
+.profile__description {
+  grid-column: 1 / 3;
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.profile__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
+  background-color: #000;
+  margin-left: auto;
+  cursor: pointer;
+  transition: all .5s ease;
+}
+
+.profile__button:hover {
+  opacity: .6;
+}
+
+.profile__plus {
+  width: 22px;
+  height: 22px;
 }
