--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   color: #fff;
   font-family: Inter, Arial, sans-serif;
   box-sizing: border-box;
+  position: relative;
 }
 
 .header {
@@ -42,7 +43,7 @@
 .profile__info {
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  grid-template-columns: repeat(2, max-content);
   grid-template-rows: repeat(2, minmax(min-content, max-content));
   gap: 16px;
 }
@@ -52,6 +53,7 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  max-width: 320px;
 }
 
 .profile__edit {
@@ -82,6 +84,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  max-width: 320px;
 }
 
 .profile__button {
@@ -105,4 +108,64 @@
 .profile__plus {
   width: 22px;
   height: 22px;
+}
+
+.gallery {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, 282px);
+  column-gap: 17px;
+  row-gap: 20px;
+  margin-bottom: 66px;
+}
+
+.gallery__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 282px;
+  height: 361px;
+  border-radius: 10px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.gallery__picture {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 282px;
+}
+
+.gallery__card-container {
+  margin-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 246px;
+}
+
+.gallery__caption {
+  color: #000;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0;
+}
+
+.gallery__like {
+  width: 22px;
+  height: 19px;
+  cursor: pointer;
+  background-image: url(./images/heart.svg);
+  background-size: cover;
+  transition: all .5s ease;
+}
+
+.gallery__like:hover {
+  opacity: .5;
+}
+
+.gallery__like_active {
+  background-image: url(./images/like_active.svg);
 }
