--- a/style.css
+++ b/style.css
@@ -169,3 +169,14 @@
 .gallery__like_active {
   background-image: url(./images/like_active.svg);
 }
+
+.footer {
+  margin-bottom: 60px;
+}
+
+.footer__copyright {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #545454;
+}
