feat: add adaptive

--- a/style.css
+++ b/style.css
@@ -180,3 +180,21 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 768px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__name {
+    text-align: center;
+  }
+
+  .profile__description {
+    text-align: center;
+  }
+
+  .profile__button {
+    margin-left: 0;
+  }
+}
