--- a/style.css
+++ b/style.css
@@ -111,12 +111,18 @@
 }
 
 .gallery {
+  margin-bottom: 66px;
+}
+
+.gallery__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fill, 282px);
   column-gap: 17px;
   row-gap: 20px;
-  margin-bottom: 66px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .gallery__card {
@@ -128,6 +134,8 @@
   border-radius: 10px;
   background-color: #fff;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .gallery__picture {
