--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,23 +1,27 @@
-.close {
+.popup__close {
   display: block;
   width: 32px;
   height: 32px;
-  background-image: url(../../images/close.svg);
+  background-image: url(./../../../images/close.svg);
   background-size: cover;
   position: absolute;
   top: -40px;
   right: -40px;
   cursor: pointer;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
   transition: all .5s ease;
+  border: none;
+  background-color: transparent;
 }
 
-.close:hover {
+.popup__close:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 450px) {
 
-  .close {
+  .popup__close {
     width: 20px;
     height: 20px;
     right: 0;
