--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,11 @@
 .footer {
-  margin-bottom: 60px;
+  margin: 0 19px 60px;
 }
 
 @media screen and (max-width: 450px) {
 
   .footer {
+
     margin-bottom: 36px;
   }
 }
