--- a/blocks/form/__submit/form__submit.css
+++ b/blocks/form/__submit/form__submit.css
@@ -1,4 +1,4 @@
-.submit {
+.form__submit {
   width: 358px;
   height: 50px;
   background-color: #000;
@@ -10,16 +10,18 @@
   margin-top: 48px;
   border-radius: 2px;
   cursor: pointer;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
   transition: all .5s ease;
 }
 
-.submit:hover {
+.form__submit:hover {
   opacity: .8;
 }
 
 @media screen and (max-width: 550px) {
 
-  .submit {
+  .form__submit {
     width: 238px;
   }
 }
