--- a/blocks/gallery/__caption/gallery__caption.css
+++ b/blocks/gallery/__caption/gallery__caption.css
@@ -5,6 +5,7 @@
   line-height: 29px;
   margin: 0;
   max-width: 224px;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
