--- a/blocks/gallery/__card-container/gallery__card-container.css
+++ b/blocks/gallery/__card-container/gallery__card-container.css
@@ -1,7 +1,13 @@
 .gallery__card-container {
   margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 246px;
 }
