--- a/blocks/gallery/__card/gallery__card.css
+++ b/blocks/gallery/__card/gallery__card.css
@@ -1,6 +1,13 @@
 .gallery__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 282px;
   height: 361px;
