--- a/blocks/gallery/__like/gallery__like.css
+++ b/blocks/gallery/__like/gallery__like.css
@@ -2,9 +2,13 @@
   width: 22px;
   height: 19px;
   cursor: pointer;
-  background-image: url(../../../images/heart.svg);
+  background-image: url(./../../../images/heart.svg);
   background-size: cover;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
   transition: all .5s ease;
+  border: none;
+  background-color: inherit;
 }
 
 .gallery__like:hover {
@@ -12,5 +16,5 @@
 }
 
 .gallery__like_active {
-  background-image: url(../../../images/like_active.svg);
+  background-image: url(./../../../images/like_active.svg);
 }
