--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,13 @@
 .header__logo {
   width: 142px;
   height: 33px;
+  -webkit-transition: all .6s ease;
+  -o-transition: all .6s ease;
+  transition: all .6s ease;
+}
+
+.header__logo:hover {
+  opacity: .6;
 }
 
 @media screen and (max-width: 450px) {
