--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
-  min-height: 74px;
   margin: 45px 19px 0;
+  padding-bottom: 41px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
@@ -10,6 +10,6 @@
     margin-top: 28px;
     margin-left: 0;
     margin-right: 0;
-    min-height: 56px;
+    padding-bottom: 32px;
   }
 }
