--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
   background-color: #000;
   color: #fff;
   font-family: Inter, Arial, sans-serif;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
 }
