--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,11 @@
 .popup__container {
-  position: fixed;
+  position: relative;
   width: 430px;
   height: 330px;
   border-radius: 10px;
   background-color: #fff;
-  margin-top: 20vh;
+  -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 550px) {
