--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,6 +1,13 @@
 .profile__button {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 150px;
   height: 50px;
@@ -9,7 +16,13 @@
   background-color: #000;
   margin-left: auto;
   cursor: pointer;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
   transition: all .5s ease;
+  background-image: url(./../../../images/plus.svg);
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+  background-position: center;
 }
 
 .profile__button:hover {
