--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,10 +1,12 @@
 .profile__description {
-  grid-column: 1 / 3;
   margin: 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  max-width: 320px;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
