--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,13 +2,25 @@
   width: 24px;
   height: 24px;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: #000;
   border: 1px solid #FFFFFF;
   cursor: pointer;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
   transition: all .5s ease;
+  background-image: url(./../../../images/pen.svg);
+  background-size: 10px 10px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .profile__edit:hover {
@@ -20,5 +32,6 @@
   .profile__edit {
     width: 18px;
     height: 18px;
+    background-size: 7.5px 7.5px;
   }
 }
