--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,36 @@
 .profile__info {
+  display: -ms-grid;
   display: grid;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  grid-template-columns: repeat(2, max-content);
-  grid-template-rows: repeat(2, minmax(min-content, max-content));
+  -ms-grid-columns: 294px 16px -webkit-min-content;
+  -ms-grid-columns: 294px 16px min-content;
+  grid-template-columns: 294px -webkit-min-content;
+  grid-template-columns: 294px min-content;
+  -ms-grid-rows: 48px 16px 22px;
+  grid-template-rows: 48px 22px;
   gap: 16px;
+}
+
+.profile__info>*:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.profile__info>*:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.profile__info>*:nth-child(3) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+.profile__info>*:nth-child(4) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
 }
 
 @media screen and (max-width: 768px) {
@@ -11,4 +38,36 @@
   .profile__info {
     gap: 14px;
   }
+}
+
+@media screen and (max-width: 450px) {
+  .profile__info {
+    -ms-grid-columns: 189px -webkit-min-content;
+    -ms-grid-columns: 189px min-content;
+    grid-template-columns: 189px -webkit-min-content;
+    grid-template-columns: 189px min-content;
+    -ms-grid-rows: 33px 17px;
+    grid-template-rows: 33px 17px;
+  }
+
+  .profile__info>*:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+  }
+
+  .profile__info>*:nth-child(2) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+  }
+
+  .profile__info>*:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+
+  .profile__info>*:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+
 }
