--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,7 +3,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  max-width: 320px;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -18,6 +21,5 @@
   .profile__name {
     font-size: 27px;
     line-height: 33px;
-    max-width: 240px;
   }
 }
