--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -48,6 +48,11 @@
     grid-template-columns: 189px min-content;
     -ms-grid-rows: 33px 17px;
     grid-template-rows: 33px 17px;
+    -webkit-column-gap: 10px;
+    -moz-column-gap: 10px;
+    column-gap: 10px;
+    row-gap: 6px;
+    margin-left: 27px;
   }
 
   .profile__info>*:nth-child(1) {
