--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.profile__edit {
+.profile__edit-button {
   width: 24px;
   height: 24px;
   padding: 0;
@@ -11,7 +11,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #000;
+  background-color: transparent;
   border: 1px solid #FFFFFF;
   cursor: pointer;
   -webkit-transition: all .5s ease;
@@ -23,13 +23,13 @@
   background-position: center;
 }
 
-.profile__edit:hover {
+.profile__edit-button:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 450px) {
 
-  .profile__edit {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
     background-size: 7.5px 7.5px;
