--- a/pages/index.css
+++ b/pages/index.css
@@ -1,37 +1,36 @@
-@import url(./../vendor/normalize.css);
-@import url(./../fonts/inter.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
 
-@import url(./../blocks/page/page.css);
-@import url(./../blocks/header/header.css);
-@import url(./../blocks/header/__logo/header__logo.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
-@import url(./../blocks/content/content.css);
+@import url(../blocks/content/content.css);
 
-@import url(./../blocks/profile/profile.css);
-@import url(./../blocks/profile/__button/profile__button.css);
-@import url(./../blocks/profile/__description/profile__description.css);
-@import url(./../blocks/profile/__edit/profile__edit.css);
-@import url(./../blocks/profile/__info/profile__info.css);
-@import url(./../blocks/profile/__name/profile__name.css);
-@import url(./../blocks/profile/__picture/profile__picture.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__description/profile__description.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__picture/profile__picture.css);
 
-@import url(./../blocks/gallery/gallery.css);
-@import url(./../blocks/gallery/__caption/gallery__caption.css);
-@import url(./../blocks/gallery/__card-container/gallery__card-container.css);
-@import url(./../blocks/gallery/__card/gallery__card.css);
-@import url(./../blocks/gallery/__grid/gallery__grid.css);
-@import url(./../blocks/gallery/__like/gallery__like.css);
-@import url(./../blocks/gallery/__picture/gallery__picture.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__caption/gallery__caption.css);
+@import url(../blocks/gallery/__card-container/gallery__card-container.css);
+@import url(../blocks/gallery/__card/gallery__card.css);
+@import url(../blocks/gallery/__grid/gallery__grid.css);
+@import url(../blocks/gallery/__like-button/gallery__like-button.css);
+@import url(../blocks/gallery/__picture/gallery__picture.css);
 
-@import url(./../blocks/footer/footer.css);
-@import url(./../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
-@import url(./../blocks/popup/popup.css);
-@import url(./../blocks/popup/_opened/popup_opened.css);
-@import url(./../blocks/popup/__container/popup__container.css);
-@import url(./../blocks/popup/__header/popup__header.css);
-@import url(./../blocks/popup/__close/popup__close.css);
-
-@import url(./../blocks/form/__container/form__container.css);
-@import url(./../blocks/form/__submit/form__submit.css);
-@import url(./../blocks/input/input.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__form-container/popup__form-container.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__header/popup__header.css);
+@import url(../blocks/popup/__close/popup__close.css);
