--- a/blocks/gallery/__card-container/gallery__card-container.css
+++ b/blocks/gallery/__card-container/gallery__card-container.css
@@ -1,5 +1,6 @@
 .gallery__card-container {
   margin-top: 25px;
+  padding-bottom: 31px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,4 +11,12 @@
   -ms-flex-align: center;
   align-items: center;
   width: 246px;
+}
+
+
+@media screen and (max-width: 450px) {
+
+  .gallery__card-container {
+    padding-bottom: 25px;
+  }
 }
