--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,17 @@
 .popup__container {
   position: relative;
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   border-radius: 10px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 550px) {
 
   .popup__container {
     width: 282px;
-    height: 322px;
+    min-height: 322px;
   }
 }
