--- a/blocks/popup/__form-container/popup__form-container.css
+++ b/blocks/popup/__form-container/popup__form-container.css
@@ -1,4 +1,4 @@
-.form__container {
+.popup__form-container {
   border: none;
   padding: 0;
   margin: 0 0 0 36px;
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 550px) {
 
-  .form__container {
+  .popup__form-container {
     margin-left: 22px;
   }
 }
