--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,21 +1,21 @@
-.input {
+.popup__input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   width: 358px;
-  height: 27px;
+  min-height: 27px;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   padding: 1px 1px 4px 1px;
 }
 
-.input:first-of-type {
+.popup__input:first-of-type {
   margin-bottom: 24px;
 }
 
 @media screen and (max-width: 550px) {
 
-  .input {
+  .popup__input {
     width: 238px;
   }
 }
