fix: third review

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.popup__close {
+.popup__close-button {
   display: block;
   width: 32px;
   height: 32px;
@@ -16,13 +16,13 @@
   background-color: transparent;
 }
 
-.popup__close:hover {
+.popup__close-button:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 450px) {
 
-  .popup__close {
+  .popup__close-button {
     width: 20px;
     height: 20px;
     right: 0;
