feat: add full size photo popup

--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,7 @@
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__photo-container/popup__photo-container.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/_dark/popup_dark.css);
