feat: add popup transition

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,8 @@
   left: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, .5);
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
