--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -2,4 +2,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: visability .6s, opacity .6s ease;
+  -o-transition: visability .6s, opacity .6s ease;
+  transition: visability .6s, opacity .6s ease;
 }
