feat: add popup closing using overlay and keydown

--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,7 @@
 @import url(../blocks/popup/__form-container/popup__form-container.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__image/popup__image.css);
